# Pico_LoRaWAN

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  build.sh
includes/: pluviometro.hpp
src/: lorawan_task.c  lorawan_task.h  main.cpp  pluviometro.cpp  spi_diagnostic.c  spi_diagnostic.h
